--- a/package.json
+++ b/package.json
@@ -30,10 +30,14 @@
     ]
   },
   "dependencies": {
+    "@types/ndarray": "^1.0.11",
+    "bootstrap": "^5.2.1",
     "express": "^4.18.1",
+    "gdal-async": "^3.5.2",
     "igc-parser": "^1.1.0",
     "igc-xc-score": "^1.6.1",
     "mysql": "^2.18.1",
+    "ndarray-gdal": "^1.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -42,13 +46,13 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0"
+    "@types/react-dom": "^18.0.6"
   }
 }
