--- a/package.json
+++ b/package.json
@@ -30,18 +30,25 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "@stdlib/types": "0.0.14",
+    "@types/geojson": "^7946.0.10",
     "@types/ndarray": "^1.0.11",
     "bootstrap": "^5.2.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "gdal-async": "^3.5.2",
+    "geotiff": "^2.0.5",
     "igc-parser": "^1.1.0",
     "igc-xc-score": "^1.6.1",
     "mysql": "^2.18.1",
-    "ndarray-gdal": "^1.3.0",
+    "ndarray-gdal": "^1.3.1",
+    "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
-    "rlayers": "^1.4.3",
+    "rlayers": "^1.4.4",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
