implement vertical profiles

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,19 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "dbserver",
+            "program": "${workspaceFolder}/src/back/dbserver.ts",
+            "runtimeExecutable": "ts-node",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+        {
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome",
+            "name": "front in Chrome",
             "url": "http://localhost:3000",
             "webRoot": "${workspaceFolder}"
         }
