--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "igc-parser": "^1.1.0",
     "igc-xc-score": "^1.6.1",
     "mysql": "^2.18.1",
+    "ndarray": "^1.0.19",
     "ndarray-gdal": "^1.3.1",
     "ol": "^7.1.0",
     "react": "^18.2.0",
@@ -51,6 +52,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "rlayers": "^1.4.4",
+    "transformation-matrix": "^2.13.0",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
