--- a/package.json
+++ b/package.json
@@ -1,79 +1,89 @@
 {
-  "name": "xc-db",
-  "version": "1.0.0",
-  "private": "true",
-  "description": "Paragliding XC DB",
-  "license": "UNLICENSED",
-  "author": "Momtchil Momtchev <momtchil@momtchev.com>",
-  "main": "index.js",
-  "scripts": {
-    "build": "react-scripts build",
-    "start": "react-scripts start",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.8.5",
-    "@stdlib/types": "0.0.14",
-    "@types/geojson": "^7946.0.10",
-    "@types/ndarray": "^1.0.11",
-    "bootstrap": "^5.2.1",
-    "cors": "^2.8.5",
-    "express": "^5.0.0-beta.1",
-    "gdal-async": "^3.5.2",
-    "geographiclib": "^1.52.2",
-    "geotiff": "^2.0.5",
-    "igc-parser": "^1.1.0",
-    "igc-xc-score": "^1.6.1",
-    "mysql": "^2.18.1",
-    "ndarray": "^1.0.19",
-    "ndarray-gdal": "^1.3.1",
-    "ol": "^7.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.4",
-    "react-scripts": "5.0.1",
-    "react-transition-group": "^4.4.5",
-    "rlayers": "^1.4.4",
-    "transformation-matrix": "^2.13.0",
-    "typescript": "^4.8.3",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/mysql": "^2.15.21",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "@typescript-eslint/typescript-estree": "^5.38.1",
-    "eslint": "^8.24.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.7.1"
-  }
+    "name": "xc-db",
+    "version": "1.0.0",
+    "private": "true",
+    "description": "Paragliding XC DB",
+    "license": "UNLICENSED",
+    "author": "Momtchil Momtchev <momtchil@momtchev.com>",
+    "main": "index.js",
+    "scripts": {
+        "build": "npm run build:front && npm run build:back",
+        "build:front": "react-scripts build",
+        "build:back": "tsc && rollup -c rollup.config.js",
+        "start": "react-scripts start",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "dependencies": {
+        "@reduxjs/toolkit": "^1.8.5",
+        "bootstrap": "^5.2.1",
+        "cors": "^2.8.5",
+        "express": "^5.0.0-beta.1",
+        "gdal-async": "^3.5.2",
+        "geographiclib": "^1.52.2",
+        "geotiff": "^2.0.5",
+        "igc-parser": "^1.1.0",
+        "igc-xc-score": "^1.6.1",
+        "mysql": "^2.18.1",
+        "ndarray": "^1.0.19",
+        "ndarray-gdal": "^1.3.1",
+        "ol": "^7.1.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.4",
+        "react-scripts": "5.0.1",
+        "react-transition-group": "^4.4.5",
+        "rlayers": "^1.4.4",
+        "transformation-matrix": "^2.13.0",
+        "typescript": "^4.8.3",
+        "web-vitals": "^2.1.4"
+    },
+    "devDependencies": {
+        "@rollup/plugin-commonjs": "^22.0.2",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^14.1.0",
+        "@stdlib/types": "0.0.14",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/geojson": "^7946.0.10",
+        "@types/jest": "^27.5.2",
+        "@types/mysql": "^2.15.21",
+        "@types/ndarray": "^1.0.11",
+        "@types/node": "^18.7.18",
+        "@types/react": "^18.0.21",
+        "@types/react-dom": "^18.0.6",
+        "@typescript-eslint/eslint-plugin": "^5.38.1",
+        "@typescript-eslint/parser": "^5.38.1",
+        "@typescript-eslint/typescript-estree": "^5.38.1",
+        "builtin-modules": "^3.3.0",
+        "eslint": "^8.24.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "prettier": "^2.7.1",
+        "rollup": "^2.79.1",
+        "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
+        "rollup-plugin-terser": "^7.0.2"
+    }
 }
