--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "build:front": "react-scripts build",
         "build:back": "tsc && rollup -c rollup.config.js",
         "start": "react-scripts start",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "deploy:front": "tar -C build -zcf - `cd build; ls *.png; ls favicon* index*` manifest.json robots.txt static | mbuffer | ssh xcdb@yastreb.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
+        "deploy:back": "tar -C build -zcf - prod deps lib | mbuffer | ssh xcdb@yastreb.garga.net 'cat - | mbuffer | tar -zxvf -'"
     },
     "browserslist": {
         "production": [
@@ -84,6 +86,7 @@
         "rollup": "^2.79.1",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
+        "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-terser": "^7.0.2"
     }
 }
