switch the user

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
     "db": {
-        "user": "mmom",
+        "user": "xcdb",
         "pass": "b045e6a8164d",
         "db": "xcdb",
         "host": "localhost"
