--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "react-redux": "^8.0.4",
         "react-scripts": "5.0.1",
         "react-transition-group": "^4.4.5",
+        "response-time": "^2.3.2",
         "rlayers": "^1.4.4",
         "transformation-matrix": "^2.13.0",
         "typescript": "^4.8.3",
