--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.4",
+        "react-router-dom": "^6.4.1",
         "react-scripts": "5.0.1",
         "react-transition-group": "^4.4.5",
         "response-time": "^2.3.2",
