--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "private": "true",
     "description": "Paragliding XC DB",
-    "license": "UNLICENSED",
+    "license": "GPL-3.0",
     "author": "Momtchil Momtchev <momtchil@momtchev.com>",
     "main": "index.js",
     "scripts": {
