--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,10 +17,7 @@
     ],
     "parserOptions": {
         "ecmaVersion": 2020,
-        "sourceType": "module",
-        "ecmaFeatures": {
-            "jsx": true
-        }
+        "sourceType": "module"
     },
     "rules": {
         "quotes": [
@@ -50,6 +47,11 @@
             "files": [
                 "src/front/*.tsx"
             ],
+            "parserOptions": {
+                "ecmaFeatures": {
+                    "jsx": true
+                }
+            },
             "rules": {
                 "@typescript-eslint/explicit-function-return-type": "off",
                 "@typescript-eslint/no-unused-vars": "off",
