--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,8 +2,6 @@
     "parser": "@typescript-eslint/parser",
     "plugins": [
         "@typescript-eslint",
-        "react",
-        "react-hooks",
         "eslint-plugin-import",
         "prettier"
     ],
@@ -52,6 +50,11 @@
                     "jsx": true
                 }
             },
+            "plugins": [
+                "react",
+                "react-hooks",
+                "formatjs"
+            ],
             "rules": {
                 "@typescript-eslint/explicit-function-return-type": "off",
                 "@typescript-eslint/no-unused-vars": "off",
@@ -68,7 +71,14 @@
                 "react/prop-types": "off",
                 "react-hooks/rules-of-hooks": "error",
                 "react-hooks/exhaustive-deps": "warn",
-                "react/jsx-key": "off"
+                "react/jsx-key": "off",
+                "formatjs/no-offset": "error",
+                "formatjs/enforce-id": [
+                    "error",
+                    {
+                        "idInterpolationPattern": "[sha512:contenthash:base64:6]"
+                    }
+                ]
             }
         }
     ]
