--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,19 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "typescript.format.enable": false,
-  "javascript.format.enable": false,
-  "eslint.format.enable": false,
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "editor.formatOnSave": true,
-  "editor.tabSize": 4,
-  "editor.detectIndentation": false
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "typescript.format.enable": false,
+    "javascript.format.enable": false,
+    "eslint.format.enable": false,
+    "[typescriptreact]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.formatOnSave": true,
+    "editor.tabSize": 4,
+    "editor.detectIndentation": false,
+    "typescript.validate.enable": false
 }
