--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
         "response-time": "^2.3.2",
         "rlayers": "^1.4.4",
         "transformation-matrix": "^2.13.0",
+        "typedarray-to-buffer": "^4.0.0",
         "typescript": "^4.8.3",
+        "vt-pbf": "^3.1.3",
         "web-vitals": "^2.1.4"
     },
     "devDependencies": {
