--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "ol": "^7.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-ga": "^3.3.1",
         "react-intl": "^6.1.2",
         "react-redux": "^8.0.4",
         "react-router-dom": "^6.4.1",
