--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,14 +19,16 @@
             "request": "launch",
             "name": "front in Chrome",
             "url": "http://localhost:3000",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}",
+            "timeout": 20000
         },
         {
             "type": "chrome",
             "request": "launch",
             "name": "front in Chrome (with URL)",
             "url": "http://localhost:3000/launch/54/route/339/flight/53358",
-            "webRoot": "${workspaceFolder}"
+            "webRoot": "${workspaceFolder}",
+            "timeout": 20000
         }
     ]
 }
