--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "ndarray": "^1.0.19",
         "ndarray-gdal": "^1.3.1",
         "ol": "^7.1.0",
+        "pymport": "^1.0.0-rc.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-ga": "^3.3.1",
