--- a/src/config.json
+++ b/src/config.json
@@ -1,13 +1,13 @@
 {
     "db": {
         "user": "xcdb",
-        "pass": "b045e6a8164d",
+        "pass": "94f99bf6",
         "db": "xcdb",
-        "host": "localhost"
+        "host": "192.168.48.1"
     },
     "dbserver": {
         "port": 8040,
-        "srtm_dir": "/home/mmom/velivole/dev/data/SRTM1/hgt/unzipped"
+        "srtm_dir": "/home/xcdb/srtm"
     },
     "map": {
         "extent": [
