--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build:front": "npm run lang:compile && REACT_APP_BUILD=\"`git rev-parse --short HEAD` `date +%Y-%m-%d`\" react-scripts build",
         "build:back": "tsc && rollup -c rollup.config.js",
         "start": "react-scripts start",
+        "start:yastreb": "ssh -L 3000:localhost:3000 -L 8040:localhost:8040 yastreb.garga.net \"cd src/xc-db && npm run start\"",
         "deploy:front": "tar -C build -zcf - `cd build; ls *.png; ls favicon* index*` manifest.json robots.txt static | mbuffer | ssh xcdb@yastreb.garga.net 'cat - | mbuffer | tar -C www -zxvf -'",
         "deploy:back": "tar -C build -zcf - back deps | mbuffer | ssh xcdb@yastreb.garga.net 'cat - | mbuffer | tar -zxvf -'",
         "deploy": "npm run deploy:back && npm run deploy:front && ssh xcdb@yastreb.garga.net 'systemctl --user restart dbserver.service'",
