--- a/package.json
+++ b/package.json
@@ -93,7 +93,9 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "lru-cache": "^10.0.0",
         "prettier": "^2.7.1",
+        "query-mvt": "^1.0.0",
         "rollup": "^2.79.1",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
