--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
         "react-scripts": "5.0.1",
         "react-transition-group": "^4.4.5",
         "response-time": "^2.3.2",
-        "rlayers": "^1.4.8",
+        "rlayers": "^2.0.0-beta.0",
         "transformation-matrix": "^2.13.0",
         "typedarray-to-buffer": "^4.0.0",
         "typescript": "^4.9.5",
