--- a/package.json
+++ b/package.json
@@ -39,14 +39,14 @@
         "bootstrap": "^5.2.1",
         "cors": "^2.8.5",
         "express": "^5.0.0-beta.1",
-        "gdal-async": "^3.5.2",
+        "gdal-async": "^3.7.2-1",
         "geographiclib": "^1.52.2",
         "geotiff": "^2.0.5",
         "igc-parser": "^1.1.0",
         "igc-xc-score": "^1.7.0",
         "mysql": "^2.18.1",
         "ndarray": "^1.0.19",
-        "ndarray-gdal": "^1.3.1",
+        "ndarray-gdal": "^1.4.0",
         "ol": "^7.2.2",
         "pymport": "^1.3.1",
         "react": "^18.2.0",
