--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "rlayers": "^2.3.2",
         "transformation-matrix": "^2.16.1",
         "typedarray-to-buffer": "^4.0.0",
-        "typescript": "^5.6.2",
+        "typescript": "^4.9.4",
         "vt-pbf": "^3.1.3",
         "web-vitals": "^4.2.3"
     },
@@ -86,7 +86,7 @@
         "@typescript-eslint/parser": "^8.3.0",
         "@typescript-eslint/typescript-estree": "^8.7.0",
         "builtin-modules": "^4.0.0",
-        "eslint": "^9.11.1",
+        "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-formatjs": "^4.13.3",
         "eslint-plugin-import": "^2.29.1",
@@ -96,10 +96,15 @@
         "lru-cache": "^11.0.1",
         "prettier": "^3.3.3",
         "query-mvt": "^1.0.2",
-        "rollup": "^4.22.4",
+        "rollup": "^2.79.1",
         "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
         "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-terser": "^7.0.2"
+    },
+    "overrides": {
+        "express": {
+            "body-parser": "1.20.3"
+        }
     }
 }
