--- a/package.json
+++ b/package.json
@@ -62,8 +62,7 @@
         "transformation-matrix": "^2.16.1",
         "typedarray-to-buffer": "^4.0.0",
         "typescript": "^4.9.4",
-        "vt-pbf": "^3.1.3",
-        "web-vitals": "^4.2.3"
+        "vt-pbf": "^3.1.3"
     },
     "devDependencies": {
         "@formatjs/cli": "^6.2.12",
