--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-react": "^7.35.0",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "husky": "^9.1.6",
         "lru-cache": "^11.0.1",
         "prettier": "^3.3.3",
         "query-mvt": "^1.0.2",
