--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,4 +11,4 @@ jobs:
               with:
                   node-version: 20.x
             - run: npm ci
-            - run: npm build
+            - run: npm run build
