--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,8 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 1
+    groups:
+      rlayers:
+        patterns:
+          - 'rtlayers'
+          - 'ol'
