--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "bootstrap": "^5.3.3",
         "cors": "^2.8.5",
         "express": "^5.0.1",
-        "gdal-async": "^3.9.2",
+        "gdal-async": "^3.10.1",
         "geographiclib": "^1.52.2",
         "geotiff": "^2.1.3",
         "igc-parser": "^2.0.0",
@@ -48,7 +48,7 @@
         "ndarray": "^1.0.19",
         "ndarray-gdal": "^1.5.0",
         "ol": "^9.1.0",
-        "pymport": "^1.5.1",
+        "pymport": "^1.6.0-rc.0",
         "react": "^18.2.0",
         "react-dom": "^18.3.1",
         "react-ga": "^3.3.1",
@@ -99,8 +99,7 @@
         "rollup": "^2.79.2",
         "rollup-plugin-copy": "^3.5.0",
         "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
-        "rollup-plugin-replace": "^2.2.0",
-        "rollup-plugin-terser": "^7.0.2"
+        "rollup-plugin-replace": "^2.2.0"
     },
     "overrides": {
         "express": {
