--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
         "@rollup/plugin-commonjs": "^28.0.2",
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-replace": "^6.0.2",
         "@rollup/plugin-typescript": "^12.1.2",
         "@stdlib/types": "0.0.14",
         "@testing-library/jest-dom": "^6.6.3",
@@ -98,8 +99,7 @@
         "query-mvt": "^1.0.2",
         "rollup": "^2.79.2",
         "rollup-plugin-copy": "^3.5.0",
-        "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp",
-        "rollup-plugin-replace": "^2.2.0"
+        "rollup-plugin-natives": "git+https://github.com/mmomtchev/rollup-plugin-natives.git#node-pre-gyp"
     },
     "overrides": {
         "express": {
